eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: simple-bank-api-deployment
    labels:
        app: simple-bank-api
spec:
    replicas: 2
    selector:
        matchLabels:
            app: simple-bank-api
    template:
        metadata:
            labels:
                app: simple-bank-api
        spec:
            containers:
                - name: simple-bank-api
                  image: 237947248857.dkr.ecr.us-west-1.amazonaws.com/simple-bank:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
